# ans_archiver

./: .editorconfig  .env.example  .gitignore  LICENSE  README.md  ans_submissions_archiver.py  printing_html_files.py  pyproject.toml
extension/: esbuild.config.mjs  manifest.json  package-lock.json  package.json  print_content_script.js  styles.css  test.js  test.ts  test2.js  tsconfig.json  web-ext-config.mjs
extension/src/: ans_submission.ts  background.ts  content.ts  session.ts  submission_attempt.ts  submission_pdf.ts  submissions.ts  types.ts  world.ts
extension/src/background/: development.ts
extension/src/bentopdf/: pymupdf-loader.ts
extension/src/browser/: print.ts
extension/src/content/: content.ts  replacing_content.ts
python/: ans_submissions_archiver.py
python/src/: parser.py  submissions.py
scripts/: version.py
src/: constants.py  parser.py  submissions.py  throttledclientsession.py  utils.py
